[package]
name = "dutchville_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
dotenvy = "0.15"
lettre = { version = "0.11", features = ["builder", "smtp-transport"] }
rand = "0.8"
rand_core = "0.6"
argon2 = "0.5"
tower-http = { version = "0.5", features = ["cors"] }